correct color picking by user param, not name

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 			background-color:antiquewhite;
 			
 		}
-		.tile.clement{
+		.tile.red{
 			background-color:red;
 		}
-		.tile.thomas{
+		.tile.blue{
 			background-color:blue;
 		}
-		.tile.clement.thomas{
+		.tile.red.blue{
 			background-color:violet;
 		}
     </style>
