generate new map with button

--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
 	<canvas id="game-container" width="800" height="480">
             Le navigateur que vous utilisez est une grosse bouse, merci d'utiliser un navigateur décent.
     </canvas>
+    <button onclick="reloadMap()">Recharge carte</button>
 </body>
 </html>
